package tunnel

import (
	"context"
	"fmt"
	"os"
	"strings"

	"github.com/pkg/errors"

	"github.com/spf13/cobra"

	"github.com/golang/protobuf/proto"

	"github.com/mutagen-io/mutagen/cmd"
	"github.com/mutagen-io/mutagen/cmd/mutagen/daemon"
	"github.com/mutagen-io/mutagen/pkg/grpcutil"
	"github.com/mutagen-io/mutagen/pkg/prompt"
	"github.com/mutagen-io/mutagen/pkg/selection"
	tunnelingsvc "github.com/mutagen-io/mutagen/pkg/service/tunneling"
	"github.com/mutagen-io/mutagen/pkg/tunneling"
)

func createMain(command *cobra.Command, arguments []string) error {
	// Validate arguments.
	if len(arguments) != 0 {
		return errors.New("unexpected arguments")
	}

	// Validate the name.
	if err := selection.EnsureNameValid(createConfiguration.name); err != nil {
		return errors.Wrap(err, "invalid tunnel name")
	}

	// Parse, validate, and record labels.
	var labels map[string]string
	if len(createConfiguration.labels) > 0 {
		labels = make(map[string]string, len(createConfiguration.labels))
	}
	for _, label := range createConfiguration.labels {
		components := strings.SplitN(label, "=", 2)
		var key, value string
		key = components[0]
		if len(components) == 2 {
			value = components[1]
		}
		if err := selection.EnsureLabelKeyValid(key); err != nil {
			return errors.Wrap(err, "invalid label key")
		} else if err := selection.EnsureLabelValueValid(value); err != nil {
			return errors.Wrap(err, "invalid label value")
		}
		labels[key] = value
	}

	// Create a default tunnel configuration.
	configuration := &tunneling.Configuration{}

	// Create the creation specification.
	specification := &tunnelingsvc.CreationSpecification{
		Configuration: configuration,
		Name:          createConfiguration.name,
		Labels:        labels,
		Paused:        createConfiguration.paused,
	}

	// Connect to the daemon and defer closure of the connection.
	daemonConnection, err := daemon.Connect(true, true)
	if err != nil {
		return errors.Wrap(err, "unable to connect to daemon")
	}
	defer daemonConnection.Close()

	// Create a cancellable context for this operation.
	ctx, cancel := context.WithCancel(context.Background())

	// Start handling prompting in a background Goroutine.
	prompter, promptingDone, _, err := daemon.HostPrompting(ctx, daemonConnection, true)
	if err != nil {
		cancel()
		return errors.Wrap(err, "unable to start prompting")
	}

	// Create a tunneling service client.
	tunnelingClient := tunnelingsvc.NewTunnelingClient(daemonConnection)

	// Set up the creation request.
	request := &tunnelingsvc.CreateRequest{
		Prompter: prompter,
		Specification: specification,
	}

	// Perform creation. We don't monitor for prompting failure while doing this
	// because (a) any network failure that causes a failure for prompting will
	// also yield a failure here and (b) the only other failure mode for
	// prompting is process termination, which will also terminate this code.
	response, err := tunnelingClient.Create(ctx, request)

	// Perform cancellation and wait for prompting to terminate (so that we know
	// the console is clean).
	cancel()
	<-promptingDone

	// Invoke the tunnel create method. The stream will close when the
	// associated context is cancelled.
	ctx, cancel := context.WithCancel(context.Background())
	defer cancel()
	stream, err := tunnelingService.Create(ctx)
	if err != nil {
		return errors.Wrap(grpcutil.PeelAwayRPCErrorLayer(err), "unable to invoke create")
	}

	// Send the initial request.
	request := &tunnelingsvc.CreateRequest{Specification: specification}
	if err := stream.Send(request); err != nil {
		return errors.Wrap(grpcutil.PeelAwayRPCErrorLayer(err), "unable to send create request")
	}

	// Create a status line printer and defer a break. We have to use standard
	// error as our status output stream because we write tunnel host parameters
	// to standard output.
	statusLinePrinter := &cmd.StatusLinePrinter{UseStandardError: true}
	defer statusLinePrinter.BreakIfNonEmpty()

	// Receive and process responses until we're done.
	for {
		if response, err := stream.Recv(); err != nil {
			return errors.Wrap(grpcutil.PeelAwayRPCErrorLayer(err), "create failed")
		} else if err = response.EnsureValid(); err != nil {
			return errors.Wrap(err, "invalid create response received")
		} else if response.HostCredentials != nil {
			statusLinePrinter.Print(fmt.Sprintf("Created tunnel %s", response.HostCredentials.Identifier))
			encodedHostCredentials, err := proto.Marshal(response.HostCredentials)
			if err != nil {
				return errors.Wrap(err, "unable to encode host parameters")
			} else if _, err := os.Stdout.Write(encodedHostCredentials); err != nil {
				return errors.Wrap(err, "unable to write encoded host parameters")
			}
			return nil
		} else if response.Message != "" {
			statusLinePrinter.Print(response.Message)
			if err := stream.Send(&tunnelingsvc.CreateRequest{}); err != nil {
				return errors.Wrap(grpcutil.PeelAwayRPCErrorLayer(err), "unable to send message response")
			}
		} else if response.Prompt != "" {
			statusLinePrinter.BreakIfNonEmpty()
			if response, err := prompt.PromptCommandLine(response.Prompt); err != nil {
				return errors.Wrap(err, "unable to perform prompting")
			} else if err = stream.Send(&tunnelingsvc.CreateRequest{Response: response}); err != nil {
				return errors.Wrap(grpcutil.PeelAwayRPCErrorLayer(err), "unable to send prompt response")
			}
		}
	}
}

var createCommand = &cobra.Command{
	Use:          "create",
	Short:        "Create and start a new tunnel",
	RunE:         createMain,
	SilenceUsage: true,
}

var createConfiguration struct {
	// help indicates whether or not to show help information and exit.
	help bool
	// name is the name specification for the tunnel.
	name string
	// labels are the label specifications for the tunnel.
	labels []string
	// paused indicates whether or not to create the tunnel in a pre-paused
	// state.
	paused bool
}

func init() {
	// Grab a handle for the command line flags.
	flags := createCommand.Flags()

	// Disable alphabetical sorting of flags in help output.
	flags.SortFlags = false

	// Manually add a help flag to override the default message. Cobra will
	// still implement its logic automatically.
	flags.BoolVarP(&createConfiguration.help, "help", "h", false, "Show help information")

	// Wire up name and label flags.
	flags.StringVarP(&createConfiguration.name, "name", "n", "", "Specify a name for the tunnel")
	flags.StringSliceVarP(&createConfiguration.labels, "label", "l", nil, "Specify labels")

	// Wire up paused flags.
	flags.BoolVarP(&createConfiguration.paused, "paused", "p", false, "Create the tunnel pre-paused")
}
